--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@lordicon/react": "^1.9.0",
+    "@tabler/icons-react": "^3.16.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
