--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
